# exploration

./: .gitignore  CMakeLists.txt  class_diagram.dia
include/: shader.hpp
include/assimp/: config.h.in
resources/shaders/: plane.fs.glsl  plane.vs.glsl
src/: CMakeLists.txt  camera.hpp  geometry.cpp  geometry.h  inputmanager.hpp  main.cxx  mesh.hpp  model.hpp  plane.hpp  shader.hpp  simplemesh.hpp  triangleSoup.cpp  triangleSoup.h
