CMAKE_MINIMUM_REQUIRED(VERSION 3.12.3)

PROJECT(exploration)

#set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/arc)
#set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
#set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)

ADD_SUBDIRECTORY(thirdparty)
ADD_SUBDIRECTORY(src)

IF("${CMAKE_CXX_COMPILER_ID}" STREQUAL "MSVC")
    MESSAGE("MSCV detected")
    TARGET_COMPILE_OPTIONS(prog PRIVATE /W4 /WX)
ELSEIF("${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU")
    MESSAGE("GCC detected")
    TARGET_COMPILE_OPTIONS(prog PRIVATE -O3) #-Wall -Wextra -pedantic -Werror -Weffc++
ELSEIF()
    MESSAGE(FATAL_ERROR "Neither GCC nor MSVC detected!")
ENDIF()
